--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ff0000</color>
+    <color name="colorPrimaryDark">@android:color/black</color>
+    <color name="colorAccent">#444444</color>
+
+    <color name="colorBg">@color/colorPrimaryDark</color>
+    <color name="colorText">@android:color/white</color>
+    <color name="colorTitle">#FF0000</color>
+    <color name="colorLink">#0000EE</color>
+    <color name="colorLightAccent">#AAAAAA</color>
+
+    <!-- YouTube icon colors -->
+    <color name="ic_youtube_bg">@color/colorText</color>
+    <color name="ic_youtube_btn_bg">@color/colorPrimaryDark</color>
+    <color name="ic_youtube_btn_clicked_bg">@color/colorPrimaryDark</color>
+    <color name="ic_youtube_pressed_bg">@color/colorPrimaryDark</color>
 </resources>
