--- a/app/src/main/res/layout/activity_catch_basin.xml
+++ b/app/src/main/res/layout/activity_catch_basin.xml
@@ -6,10 +6,10 @@
     android:layout_width="match_parent"
     android:padding="10dp"
     android:orientation="vertical"
-    tools:context=".ShowLocation">
+    tools:context=".CatchBasin">
     <include
         android:id="@+id/toolbar"
-        layout="@layout/partial_titlebar" />
+        layout="@layout/part_titlebar" />
     <EditText
         android:id="@+id/et_samplingDate"
         android:layout_width="match_parent"
