--- a/app/src/main/res/drawable/edit_text_box.xml
+++ b/app/src/main/res/drawable/edit_text_box.xml
@@ -3,10 +3,10 @@
     android:shape="rectangle">
 
     <solid
-        android:color="@color/colorAccent" />
+        android:color="@color/colorAccent"/>
     <stroke
         android:width="1dp"
-        android:color="@android:color/black" />
+        android:color="@color/colorBg" />
     <corners
-        android:radius="2dp"/>
+        android:radius="4dp"/>
 </shape>
