--- a/app/src/main/res/layout/part_button.xml
+++ b/app/src/main/res/layout/part_button.xml
@@ -4,8 +4,8 @@
     android:id="@+id/btnListItem"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp"
-    android:layout_marginTop="5dp"
+    android:layout_margin="5dp"
+    android:layout_weight="1"
     android:background="@drawable/touch_anim_ripple"
     android:padding="50dp"
     android:textColor="@drawable/selector_btn_text_default"/>
