--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,7 +15,7 @@
         <item name="android:background">@color/colorBg</item>
     </style>
 
-    <style name="WorkoutTheme" parent="AppTheme">
+    <style name="CatchBasinTheme" parent="AppTheme">
         <item name="editTextStyle">@style/EditTextStyle</item>
         <item name="android:textViewStyle">@style/TextViewStyle</item>
         <item name="android:buttonStyle">@style/ButtonStyle</item>
@@ -48,6 +48,8 @@
         <item name="android:inputType">textNoSuggestions</item>
         <item name="android:padding">10dp</item>
         <item name="android:textAlignment">center</item>
+        <item name="android:textColor">@color/colorText</item>
+        <item name="android:textColorHint">@android:color/holo_red_light</item>
         <item name="android:textCursorDrawable">@null</item>
     </style>
 </resources>
